--- a/stopwatch.html
+++ b/stopwatch.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,20 @@
     <title>STOP WATCH</title>
     <link rel="stylesheet" href="stopwatcah.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <h1>STOP WATCH</h1>
+        <div id="main"></div>
+        <div class="btn">
+            <button id="btn1">START </button>
+            <button id="btn2">STOP</button>
+        </div>
+    </div>
 
 
-<script src="stopwatcah.js"></script>
+
+    <script src="stopwatcah.js"></script>
 </body>
+
 </html>
