whole funcanality added, Hour , minutes and second digits added and make both the buttons working

--- a/stopwatch.html
+++ b/stopwatch.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <h1>STOP WATCH</h1>
-        <div id="main"></div>
+        <div id="main"> <span id="hur">0</span> <span id="min">0</span> <span id="sc">0</span></div>
         <div class="btn">
             <button id="btn1">START </button>
             <button id="btn2">STOP</button>
